// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton Snapshot 1`] = `
<span
  className="css-srlyvc"
>
  <input
    checked={true}
    className="css-1glgzkh"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="css-11cesq1"
  />
</span>
`;

exports[`RadioButton Snapshot 2`] = `
<span
  className="css-srlyvc"
>
  <input
    className="css-1glgzkh"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="css-11cesq1"
  />
</span>
`;
